--- a/Aquarium/style.css
+++ b/Aquarium/style.css
@@ -3,6 +3,9 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
 }
+html{
+    overflow:hidden;
+}
 
 h1 {
     text-align: center;
